--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "@vue/cli-service": "^4.1.0",
     "babel-eslint": "^10.0.3",
     "babel-plugin-component": "^1.1.1",
+    "element-json-scheme-component": "^1.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "jsoneditor": "^8.2.0",
+    "jsoneditor": "^8.3.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
